Test/comp/DowncastDt.dfy.expect

Dafny program verifier finished with 2 verified, 0 errors

Dafny program verifier did not attempt verification
Errors compiling program:
(1867,23): error CS1061: '_ICo<X>' does not contain a definition for 'DowncastClone' and no accessible extension method 'DowncastClone' accepting a first argument of type '_ICo<X>' could be found (are you missing a using directive or an assembly reference?)


Dafny program verifier did not attempt verification
Co.Co(_module.Y) and Co.Co(_module.Y)
Done

Dafny program verifier did not attempt verification
Co.Co(_module.Y) and Co.Co(_module.Y)
Done

Dafny program verifier did not attempt verification
DowncastDt.dfy(20,9): Error: compilation does not support trait types as a type parameter (got 'X'); consider introducing a ghost
Wrote textual form of partial target program to DowncastDt-java/DowncastDt.java
